adds font integration for desktop

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Poltawski+Nowy&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/wui2oyz.css" />
   </head>
   <body>
     <div id="root"></div>
